# usde-innovations-applications-forest-it

./: .dockerignore  CLAUDE.md  Course_layout.md  DATASETS.md  Dockerfile  INSTALATION_INSTRUCTION.md  INSTALLATION_INSTRUCTIONS.md  Makefile  README.md  TODO.md  course_brainstorming.md  docker-compose.yml  environment-demo.yml  environment-herdnet.yml  environment-megadetector.yml  environment-training.yml  pyproject.toml
.claude/: CLAUDE.md  README.md
.claude/active-learning-wildlife/agents/: exercise_designer_agent.md
.claude/active-learning-wildlife/references/: hilda_framework.md
.claude/active-learning-wildlife/templates/: active_learning_loop_template.py
.claude/agents/: code-improver.md  frontend-reviewer.md  hilda-reviewer.md  isolated-tester.md  pipeline-architect.md  pr-reviewer.md  test-runner.md  training.md
.claude/herdnet-training/: SKILL.md
.claude/herdnet-training/references/: csv_dataset_format.md  patcher_usage.md  thesis_benchmarks.md  training_diagnostics.md
.claude/herdnet-training/templates/: evaluation_report_template.md
.claude/megadetector/: SKILL.md
.claude/megadetector/references/: output_format_reference.md  shared_pytorch_conventions.md
.claude/practical-cv-wildlife/: SKILL.md
.claude/practical-cv-wildlife/references/: thesis_as_case_study.md  wildlife_datasets_guide.md
.claude/practical-cv-wildlife/templates/: aerial_concepts_notebook_template.md  curriculum_plan_template.md  wildlife_adapted_notebook_template.md  yolo_finetuning_exercise_template.md
.claude/sahi-inference/: SKILL.md
.claude/sahi-inference/agents/: code_generation_agent.md
.claude/sahi-inference/templates/: sahi_batch_template.py
.claude/skills/active-learning-wildlife/: SKILL.md  SKILL_Label_Studio.md
.claude/skills/geospatial-patterns/: SKILL.md
.claude/skills/herdnet-training/: SKILL.md
.claude/skills/iguana-case-study/: SKILL.md
.claude/skills/megadetector/: MegaDetectorSetup.md  SKILL.md  megadetector_fine_tuning.md
.claude/skills/practical-cv-wildlife/: SKILL.md
.claude/skills/run_testing/: SKILL.md
.claude/skills/sahi-inference/: SKILL.md
.claude/skills/testing_data/: SKILL.md
.claude/skills/training/: SKILL.md  training_data_conversion.py  yolo_fine_tune.py
.claude/skills/wildlife-classification/: SKILL.md
.claude/wildlife-classification/agents/: config_agent.md  training_code_agent.md
.claude/wildlife-classification/references/: class_imbalance_strategies.md  classification_augmentation.md  deepfaune_architecture.md  model_evaluation_standards.md
.github/workflows/: test-environments.yml  test-notebooks.yml
doc/: JUPYTERHUB_SETUP.md  aerial_megadetector_plan.md  aerial_person_crowd_detection_datasets.md  aerial_vehicle_detection_datasets.md  aerial_wildlife_datasets_reference.md  fine_tuning_yolo11.md  test.md
doc/local/: CHANGELOG.md  TODO.md
docs/superpowers/specs/: 2026-04-14-webapp-design.md
jupyter_hub_template/: Dockerfile  Makefile  README.md  docker-compose.yml
scripts/: CLAUDE.md  convert_to_coco.py  debug_label_studio_auth.py  debug_sweden_speciesnet.py  sanity_check_coco.py
scripts/data/: download_data.py  label_studio_sync.py  upload_eikelboom.py
scripts/training/: benchmark_sahi.py  calibrate_confidence.py  convert_dataset.py  diagnose_training.py  eval_eikelboom.py  evaluate_detectors.py  phased_finetune.py  prepare_combined_dataset.py  reproduce_runs.sh  run_phased_eikelboom.sh  train_classification.py  train_combined_yolo11.py  train_detection.py  train_megadetector.py  train_segmentation.py  validate_dataset.py
src/wildlife_detection/: __init__.py  download_data.py  label_studio.py
src/wildlife_detection/tiling/: __init__.py  boxes.py  masks.py  points.py  utils.py
src/wildlife_detection/training/: __init__.py  datasets.py  eval_eikelboom.py  herdnet.py  phased_finetune.py  prepare_combined_dataset.py  segmentation.py  train_yolo_combined.py  yolo.py
src/wildlife_detection/utils/: __init__.py  config.py  density.py
tests/: conftest.py  test_config.py  test_datasets.py  test_density.py  test_notebooks.py  test_segmentation_utils.py  test_tiling_utils.py
webapp/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  environment-webapp.yml
webapp/_data/lissl_occurances/: missing_wolf.csv  output_scores.csv  raw_duplicates.csv  wb_wolf_dt.csv  wolf_clean.csv  wolf_duplicates.csv
webapp/app/: camera_meta.py  config.py  diff_gallery.py  effective_labels.py  evaluation.py  exports.py  gallery.py  job_manager.py  labelstudio.py  lissl_groundtruth.py  main.py  metadata.py  series.py  sessions.py  thumbs.py  tus.py  user_config.py  user_labels.py  worker.py
webapp/app/detectors/: deepfaune.py  megadetector.py  speciesnet.py  speciesnet_canonical.py
webapp/app/tabs/: admin.py  deepfaune.py  evaluation.py  map_view.py  megadetector.py  series.py  speciesnet.py  speciesnet_full.py  upload.py
webapp/tests/: test_detectors.py
week1/data/: DATASETS.md  camera_trap_labels.csv  download_data.py
week1/practicals/: 06_practical_aerial_animal_detection_domain_shift.ipynb  p1_drone_imagery.py  p1_visual_image_dataset.py  p2_annotation_tools.py  p3_1_megadetector.py  p3_2_megadetector.py  p3_megadetector.py  p4_1_detection_exploration.py  p4_2_annotation_tools.py  p4_detection_exploration.py  p5_classifier.py  p6_evaluation.py  p7_segmentation.py  p8_wrapup.py  practical_01_visual_wildlife_datasets.ipynb  practical_04_annotation_tools.ipynb  practical_05_species_classification.ipynb  practical_06_aeirial_object_detection-herdnet.ipynb  practical_06_aerial_animal_detection_domain_shift.ipynb  practical_06_aerial_object_detection-herdnet.ipynb  practical_07_annotation_tools.ipynb  practical_07_run_training.ipynb  practical_07_segmentation.ipynb  practical_08_run_training.ipynb  practical_08_segmentation.ipynb  practical_08_wrapup.ipynb  practical_09_wrapup.ipynb  practical_10_case_study_iguanas.ipynb  practical_5_species_classification.ipynb
week1/practicals/bonus/: practical_06_aerial_object_detection-herdnet.ipynb  practical_segmentation.ipynb
(+80 files in other folders)
